[package]
name = "polyeval"
version = "0.3.1"
authors = ["Federico Stra <stra.federico@gmail.com>"]
description = "Evaluate polynomials."
license = "MIT" # https://spdx.org/licenses/
repository = "https://github.com/FedericoStra/polyeval"
categories = ["algorithms", "mathematics", "no-std"] # https://crates.io/category_slugs
keywords = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2.17", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
